--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  camera: ^0.10.0+3
   cupertino_icons: ^1.0.6
   emoji_picker_flutter: ^3.0.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.3.2
-  
 
 dev_dependencies:
   flutter_lints: ^3.0.0
