--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.0.11
   shared_preferences: ^2.3.2
   video_player: ^2.9.1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
