--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,13 @@ dependencies:
   emoji_picker_flutter: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_otp_text_field: ^1.2.0
   flutter_svg: ^2.0.10+1
   path: ^1.8.3
   path_provider: ^2.0.11
   shared_preferences: ^2.3.2
-  video_player: ^2.9.1
   socket_io_client: ^2.0.3+1
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
