--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_otp_text_field: ^1.2.0
+  flutter_secure_storage: ^9.2.2
   flutter_svg: ^2.0.10+1
+  intl: ^0.19.0
+  logger: ^2.4.0
   path: ^1.8.3
   path_provider: ^2.0.11
   shared_preferences: ^2.3.2
   socket_io_client: ^2.0.3+1
   video_player: ^2.9.1
+  image_picker: ^1.1.2
+  
 
 dev_dependencies:
   flutter_lints: ^3.0.0
